--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -8,7 +8,7 @@ a {
 	margin: 30px;
 }
 
-.sectionTItle {
+.sectionTitle {
 	font-size: 2em;
 	font-weight: bold;
 	margin: 10px;
@@ -44,4 +44,172 @@ a {
 	top: 10px;
 	right: 10px;
 	font-style: italic;
+}
+
+/* DETAILS.css */
+
+.imageDetails {
+	text-align: left;
+	margin: 0 auto;
+	width: min-content;
+	max-width: 100%;
+	z-index: 0;
+}
+
+.imageDetails img {
+	width: -moz-available; /* WebKit-based browsers will ignore this. */
+	width: -webkit-fill-available;
+	/* Mozilla-based browsers will ignore this. */
+	width: fill-available;
+}
+.subContent{
+	margin: 10px;
+}
+
+.imageTitle {
+	text-align: center;
+	font-size: 2.5em;
+	margin: 20px;
+}
+
+.imageDate {
+	margin: 10px 0;
+	font-style: italic;
+}
+
+.imageDescription {
+	font-size: 1.25em;
+	text-align: left;
+}
+
+.imageDescription span:first-child {
+	font-weight: bold;
+}
+.comment {
+    border: 1px solid gray;
+    margin: 10px 0;
+    padding: 10px;
+    width: 30%;
+    min-width: 125px;
+    border-radius: 5px;    
+    overflow-wrap: anywhere;
+}
+.commentDate {
+    float: right;
+    font-size: 0.75em;
+    font-style: italic;
+    padding: 0 0 5px 5px;
+}
+.commentNickname {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+#commentBox {
+    font-family: inherit;
+    font-size: inherit;
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+}
+input[type=submit]{
+	margin: 10px 0;
+}
+
+/* CREATE ALBUM.css */
+
+.images {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	justify-content: space-evenly;
+	flex-direction: row;
+	align-content: stretch;
+}
+
+.imageSelection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 10px;
+}
+
+.images img {
+	max-width: 350px;
+	border-radius: 5px;
+	margin: 10px 0;
+}
+
+.imageTitle {
+	font-weight: bold;
+	font-size: 1.25em;
+}
+
+input[type=text] {
+	width: 50%;
+	box-sizing: border-box;
+	min-width: 400px;
+}
+
+/* ALBUM.css */
+
+.thumbnails {
+	height: calc(20vw - 44px);
+	position: relative;
+	margin: 0 50px;
+}
+
+.thumbnail {
+	width: calc(20% - 20px);
+	height: 100%;
+	margin: 0 10px;
+	float: left;
+}
+
+.thumbnail img {
+	transform: scale(1.05);
+}
+
+.thumbnail img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+	transition: transform 0.1s;
+}
+
+.imageTitle {
+	color: black;
+	font-size: 1.25em;
+	padding: 10px 0;
+	font-weight: bold;
+}
+
+#left, #right {
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	top: calc(50% - 20px);
+	border-radius: 50%;
+	padding: 0 0 5px 0;
+	font-size: 2em;
+	border: none;
+	color: white;
+	text-decoration: none;
+	background-color: #26f;
+	box-sizing: border-box;
+	margin: 15px;
+	transition: background-color 0.1s;
+	cursor: pointer;
+}
+
+#left:hover, #right:hover {
+	background-color: #15e;
+}
+
+#left {
+	left: -60px;
+}
+
+#right {
+	right: -60px;
 }
