--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -14,10 +14,6 @@ a {
 	margin: 10px;
 }
 
-.albumTab a {
-	color: black;
-}
-
 .albumTab {
 	border: 1px solid gray;
 	width: 80%;
@@ -26,12 +22,13 @@ a {
 	box-sizing: border-box;
 	position: relative;
 	border-radius: 5px;
+	cursor: pointer;
 	transition: background-color 0.1s;
 }
 
 .albumTab:hover {
-    background-color: #e3f8ff;
-    border: 1px solid;
+	background-color: #e3f8ff;
+	border: 1px solid;
 }
 
 .albumTitle {
@@ -47,7 +44,6 @@ a {
 }
 
 /* DETAILS.css */
-
 .imageDetails {
 	text-align: left;
 	margin: 0 auto;
@@ -62,13 +58,14 @@ a {
 	/* Mozilla-based browsers will ignore this. */
 	width: fill-available;
 }
-.subContent{
+
+.subContent {
 	margin: 10px;
 }
 
 .imageTitle {
 	text-align: center;
-	font-size: 2.5em;
+	font-size: 2em;
 	margin: 20px;
 }
 
@@ -85,38 +82,38 @@ a {
 .imageDescription span:first-child {
 	font-weight: bold;
 }
+
 .comment {
-    border: 1px solid gray;
-    margin: 10px 0;
-    padding: 10px;
-    width: 30%;
-    min-width: 125px;
-    border-radius: 5px;    
-    overflow-wrap: anywhere;
-}
-.commentDate {
-    float: right;
-    font-size: 0.75em;
-    font-style: italic;
-    padding: 0 0 5px 5px;
-}
-.commentNickname {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-#commentBox {
-    font-family: inherit;
-    font-size: inherit;
-    margin-top: 20px;
-    padding: 10px;
-    border-radius: 5px;
-}
-input[type=submit]{
+	border: 1px solid gray;
 	margin: 10px 0;
+	padding: 10px;
+	width: 30%;
+	min-width: 125px;
+	border-radius: 5px;
+	overflow-wrap: anywhere;
+}
+
+.commentDate {
+	float: right;
+	font-size: 0.75em;
+	font-style: italic;
+	padding: 0 0 5px 5px;
+}
+
+.commentNickname {
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+
+#commentBox {
+	font-family: inherit;
+	font-size: inherit;
+	margin-top: 20px;
+	padding: 10px;
+	border-radius: 5px;
 }
 
 /* CREATE ALBUM.css */
-
 .images {
 	display: flex;
 	flex-wrap: wrap;
@@ -151,7 +148,6 @@ input[type=text] {
 }
 
 /* ALBUM.css */
-
 .thumbnails {
 	height: calc(20vw - 44px);
 	position: relative;
@@ -165,7 +161,7 @@ input[type=text] {
 	float: left;
 }
 
-.thumbnail img {
+.thumbnail:hover img {
 	transform: scale(1.05);
 }
 
@@ -175,9 +171,10 @@ input[type=text] {
 	height: 100%;
 	border-radius: 5px;
 	transition: transform 0.1s;
+	cursor: pointer;
 }
 
-.imageTitle {
+.thumbnailTitle {
 	color: black;
 	font-size: 1.25em;
 	padding: 10px 0;
@@ -212,4 +209,45 @@ input[type=text] {
 
 #right {
 	right: -60px;
+}
+
+/* MODAL WINDOW */
+.modal {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
+	background-color: rgba(0, 0, 0, 0.5)
+}
+
+.modal>.imageDetails {
+	max-width: calc(100% - 200px);
+	height: calc(100% - 200px);
+	margin-top: 100px;
+	overflow-y: scroll;
+	background-color: white;
+	border-radius: 5px;
+}
+
+.closeModal {
+	position: absolute;
+	background-color: red;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	font-weight: bold;
+	color: white;
+	border-radius: 50%;
+	line-height: 40px;
+	cursor: pointer;
+	top: 80px;
+	left: calc(50% - 20px);
+	transition: background-color 0.1s;
+}
+
+.closeModal:hover {
+	background-color: #d00;
 }
