--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -18,14 +18,26 @@ body {
 
 #errorMsg, #successMsg {
 	font-weight: bold;
+	position: fixed;
+	left: 50%;
+	color: white;
+	transform: translateX(-50%);
+	padding: 5px;
+	top: 45px;
+	border-radius: 5px;
+	z-index: 100;
+	opacity: 0;
+	
 }
-
+.fade{
+	animation: fade 5s linear;
+}
 #errorMsg {
-	color: red;
+	background-color: rgba(255, 0, 0, 0.75);
 }
 
 #successMsg {
-	color: limegreen;
+	background-color: rgba(50, 205, 50, 0.75);
 }
 
 input[type=text], input[type=password], input[type=email] {
@@ -85,7 +97,12 @@ input[type=button]:hover {
 	text-decoration: none;
 	font-weight: bold;
 }
-
+@keyframes fade {
+  0% { opacity: 0; }
+  5% { opacity: 1; }
+  95% { opacity: 1; }
+  100% { opacity: 0; }
+}
 /* scrollbar */
 ::-webkit-scrollbar {
 	width: 10px;
